@@ -24,7 +24,6 @@ from .. import calculation as calc
 from ..api_control import api
 from ..const_common import TEXT_NA
 from ..module_info import minfo
-from ..userfile.heatmap import select_brake_failure_thickness, set_predefined_brake_name
 from ._base import Overlay
 
 
@@ -45,7 +44,6 @@ class Realtime(Overlay):
         bar_padx = self.set_padding(self.wcfg["font_size"], self.wcfg["bar_padding"])
         bar_width = font_m.width * 4 + bar_padx
         self.freeze_duration = min(max(self.wcfg["freeze_duration"], 0), 30)
-        self.failure_thickness = (0, 0, 0, 0)
         self.threshold_remaining = min(max(self.wcfg["warning_threshold_remaining"], 0), 100) * 0.01
 
         # Base style
@@ -193,84 +191,45 @@ class Realtime(Overlay):
                 )
                 layout_mins.addWidget(cap_mins, 0, 0, 1, 0)
 
-        # Last data
-        self.last_class_name = None
-        self.last_lap_stime = 0  # last lap start time
-        self.wear_prev = [0] * 4  # previous moment remaining wear
-        self.wear_curr_lap = [0] * 4  # live wear update of current lap
-        self.wear_last_lap = [0] * 4  # total wear of last lap
-        self.wear_stint_start = [0] * 4  # remaining wear at start of stint
-
-    def post_update(self):
-        self.wear_prev = [0] * 4
-        self.wear_curr_lap = [0] * 4
-        self.wear_last_lap = [0] * 4
-        self.wear_stint_start = [0] * 4
-
     def timerEvent(self, event):
         """Update when vehicle on track"""
-        lap_stime = api.read.timing.start()
-        lap_etime = api.read.timing.elapsed()
-        class_name = api.read.vehicle.class_name()
-
-        # Brake thickness in millimeter
-        wear_curr = [value * 1000 for value in minfo.restapi.brakeWear]
-
-        # Update failure thickness
-        if self.last_class_name != class_name:
-            self.last_class_name = class_name
-            self.update_failure_thickness = (class_name)
-
-        if lap_stime != self.last_lap_stime:
-            self.wear_last_lap = self.wear_curr_lap
-            self.wear_curr_lap = [0] * 4  # reset real time wear
-            self.last_lap_stime = lap_stime  # reset time stamp counter
-
         for idx in range(4):
-            # Calculate effective thickness
-            wear_curr[idx] -= self.failure_thickness[idx]
+            brake_curr = minfo.wheels.currentBrakeThickness[idx]
+            wear_curr_lap = minfo.wheels.currentBrakeWear[idx]
+            wear_last_lap = minfo.wheels.lastLapBrakeWear[idx]
+            max_thickness = minfo.wheels.maxBrakeThickness[idx]
 
-            # Calibrate max thickness
-            if self.wear_stint_start[idx] < wear_curr[idx]:
-                self.wear_stint_start[idx] = wear_curr[idx]
-
-            if not self.wear_stint_start[idx]:  # bypass invalid value
-                wear_curr[idx] = 0
-            elif not self.wcfg["show_thickness"]:  # convert to percent
-                wear_curr[idx] *= 100 / self.wear_stint_start[idx]
-
-            # Update wear differences & accumulated wear
-            wear_diff = self.wear_prev[idx] - wear_curr[idx]
-            self.wear_prev[idx] = wear_curr[idx]
-            if wear_diff > 0:
-                self.wear_curr_lap[idx] += wear_diff
+            if self.wcfg["show_thickness"]:
+                brake_curr *= max_thickness / 100
+                wear_curr_lap *= max_thickness / 100
+                wear_last_lap *= max_thickness / 100
 
             # Remaining wear
             if self.wcfg["show_remaining"]:
                 if self.wcfg["show_thickness"]:
-                    threshold_remaining = self.threshold_remaining * self.wear_stint_start[idx]
+                    threshold_remaining = self.threshold_remaining * max_thickness
                 else:
                     threshold_remaining = self.threshold_remaining * 100
-                self.update_wear(self.bars_wear[idx], wear_curr[idx], threshold_remaining)
+                self.update_wear(self.bars_wear[idx], brake_curr, threshold_remaining)
 
             # Wear differences
             if self.wcfg["show_wear_difference"]:
                 if (self.wcfg["show_live_wear_difference"] and
-                    lap_etime - lap_stime > self.freeze_duration):
-                    self.update_diff(self.bars_diff[idx], self.wear_curr_lap[idx])
+                    api.read.timing.current_laptime() > self.freeze_duration):
+                    self.update_diff(self.bars_diff[idx], wear_curr_lap)
                 else:  # Last lap diff
-                    self.update_diff(self.bars_diff[idx], self.wear_last_lap[idx])
+                    self.update_diff(self.bars_diff[idx], wear_last_lap)
 
             # Estimated lifespan in laps
             if self.wcfg["show_lifespan_laps"]:
                 wear_laps = calc.wear_lifespan_in_laps(
-                    wear_curr[idx], self.wear_last_lap[idx], self.wear_curr_lap[idx])
+                    brake_curr, wear_last_lap, wear_curr_lap)
                 self.update_laps(self.bars_laps[idx], wear_laps)
 
             # Estimated lifespan in minutes
             if self.wcfg["show_lifespan_minutes"]:
                 wear_mins = calc.wear_lifespan_in_mins(
-                    wear_curr[idx], self.wear_last_lap[idx], self.wear_curr_lap[idx],
+                    brake_curr, wear_last_lap, wear_curr_lap,
                     minfo.delta.lapTimePace)
                 self.update_mins(self.bars_mins[idx], wear_mins)
 
@@ -316,18 +275,3 @@ class Realtime(Overlay):
     def format_num(value):
         """Format number"""
         return f"{value:.2f}"[:4].strip(".")
-
-    def update_failure_thickness(self, class_name: str):
-        """Update failure thickness"""
-        failure_thickness_f = select_brake_failure_thickness(
-            set_predefined_brake_name(class_name, True)
-        )
-        failure_thickness_r = select_brake_failure_thickness(
-            set_predefined_brake_name(class_name, False)
-        )
-        self.failure_thickness = (
-            failure_thickness_f,
-            failure_thickness_f,
-            failure_thickness_r,
-            failure_thickness_r,
-        )
