@@ -5,6 +5,9 @@ WIP
     This warning flash effect plays only a limited number of times, with highlight duration and interval that can be customized via "number_of_warning_flashes, warning_flash_highlight_duration, warning_flash_interval" options.
     Default number of flashes is 10 times, with a highlight duration of 0.4s, and a cooldown interval of 0.4s in-between.
 
+* Wheels Module
+  - Brake and tyre wear calculation is now handled by Wheels Module.
+
 * Misc
   - "enable_high_dpi_scaling" option is now enabled by default for new user.
   - Fixed global locale setting for correctly displaying digits and decimal separator in certain system that uses special characters.
